[gd_scene load_steps=7 format=2]

[ext_resource path="res://Jugador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Món.gd" type="Script" id=2]
[ext_resource path="res://Interficie.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asteroide.tscn" type="PackedScene" id=4]
[ext_resource path="res://PNG/fondo-espacio-ilustracion-vector-abstracto-planeta-cielo-estrellado-espacio-blanco-creatividad_177886-463.webp" type="Texture" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -4, -8, 0, 0, 0, 0, 637, -1, 0, 0, 0, 0, 643, 958, 0, 0, 0, 0, -2, 954, 0, 0, 0, 0, -4, -8, 0, 0, 0, 0, 1, -3 )
}

[node name="Món" type="Node"]
script = ExtResource( 2 )
Asteroide = ExtResource( 4 )

[node name="Fons" type="TextureRect" parent="."]
margin_top = -2.0
margin_right = 640.0
margin_bottom = 957.0
texture = ExtResource( 5 )
expand = true

[node name="Jugador" parent="." instance=ExtResource( 1 )]

[node name="AsteroidesTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="PuntuacioTimer" type="Timer" parent="."]

[node name="IniciTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PosicioInici" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Cami" type="Path2D" parent="."]
position = Vector2( 1.98764, 4.95859 )
scale = Vector2( 0.996909, 0.994824 )
curve = SubResource( 1 )

[node name="PosicioAsteroide" type="PathFollow2D" parent="Cami"]
position = Vector2( -4, -8 )
rotation = 0.0109199

[node name="Interficie" parent="." instance=ExtResource( 3 )]

[connection signal="xoc" from="Jugador" to="." method="game_over"]
[connection signal="timeout" from="AsteroidesTimer" to="." method="_on_AsteroidesTimer_timeout"]
[connection signal="timeout" from="PuntuacioTimer" to="." method="_on_PuntuacioTimer_timeout"]
[connection signal="timeout" from="IniciTimer" to="." method="_on_IniciTimer_timeout"]
[connection signal="iniciar_joc" from="Interficie" to="." method="nou_joc"]
